# video-ocr

./: .env.example  .gitignore  PACKAGING.md  README.md  app_icon.icns  build_mac_app.sh  build_with_pyinstaller.sh  create_icon.sh  example.py  extract_subtitle.py  install_deps.sh  main.py  ocr_utils.py  package_app.py  package_dmg.sh  pyproject.toml  requirements.txt  run_app.sh  run_gui.py  setup.cfg  setup.py  setup.sh  splash_launcher.py  subtitle_utils.py  version.txt  video_upload_interface.py  video_utils.py
.github/workflows/: ci-cd.yml
assets/: app_icon.icns  icon_resources.py
config/: development.yaml  production.yaml  visionsub.yaml
docs/: api-reference.md  developer-guide.md  performance-guide.md  user-guide.md
scripts/: build_mac_app.sh  build_with_pyinstaller.sh  install_deps.sh  package_dmg.sh  run_app.sh  run_tests.sh  setup.sh
src/visionsub/: __init__.py  app.py  extract_subtitle.py  main.py  ocr_utils.py  subtitle_utils.py  video_upload_interface.py  video_utils.py
src/visionsub/batch_processing/: batch_processor.py
src/visionsub/cli/: __init__.py  main.py
src/visionsub/core/: __init__.py  async_ocr_engine.py  config_manager.py  engine.py  enhanced_engine.py  enhanced_ocr_engine.py  enhanced_video_processor.py  error_handler.py  errors.py  frame_cache.py  health_check.py  logging_system.py  memory_manager.py  ocr.py  ocr_engine.py  ocr_engines.py  roi_manager.py  scene_detection.py  security_manager.py  subtitle_processor.py  text_processor.py  video.py  video_processor.py
src/visionsub/examples/: enhanced_system_integration.py
src/visionsub/export/: __init__.py  export_manager.py
src/visionsub/features/: __init__.py  advanced_ocr.py  preview.py
src/visionsub/microservices/: __init__.py  gateway.py  service_mesh.py
src/visionsub/models/: config.py  ocr.py  subtitle.py  video.py
src/visionsub/security/: __init__.py  code_injection_protection.py  data_encryption.py  dependency_checker.py  enhanced_security_manager.py  file_handler.py  input_validator.py  network_security.py  privilege_escalation_protection.py  resource_leak_protection.py  secure_storage.py  validator.py
src/visionsub/services/: __init__.py  batch_service.py  enhanced_services.py
src/visionsub/ui/: README_ENHANCED.md  advanced_ocr_settings.py  enhanced_main.py  enhanced_main_window.py  enhanced_ocr_preview.py  enhanced_settings_dialog.py  enhanced_subtitle_editor.py  enhanced_video_player.py  main.py  main_window.py  roi_selection.py  subtitle_editor.py  test_enhanced_components.py  theme_system.py  video_player.py
test_utils/: __init__.py  conftest.py  test_enhanced_ui_utils.py
tests/: TESTING_README.md  conftest.py  run_category_tests.py  run_enhanced_ui_tests.py  test_basic.py  test_comprehensive.py  test_comprehensive_performance.py  test_config.py  test_e2e.py  test_enhanced_backend.py  test_enhanced_frontend_comprehensive.py  test_enhanced_frontend_integration.py  test_enhanced_frontend_security.py  test_enhanced_ui.py  test_enhanced_ui_advanced.py  test_enhanced_ui_comprehensive.py  test_export.py  test_gui_components.py  test_integration.py  test_microservices.py  test_performance.py  test_roi_manager.py  test_security.py  test_unit.py
(+7 files in other folders)
